--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,6 +8,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "lib": ["ESNext"],
     "baseUrl": ".",
+    "erasableSyntaxOnly": true,
     "paths": {
       "@/*": ["./src/*"]
     }
