--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,9 +6,9 @@
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "lib": ["ESNext"],
-
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"]
+    "types": ["node"],
+    "erasableSyntaxOnly": true
   }
 }
