--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sass": "1.97.2",
     "simple-git": "3.30.0",
     "simple-git-hooks": "2.13.1",
+    "svgo": "4.0.0",
     "tsx": "4.21.0",
     "typescript": "5.9.3",
     "typescript-eslint": "8.53.1",
